@@ -1,5 +1,8 @@
+2016-08-14  Kirit Saelensminde  <kirit@felspar.com>
+ Deprecate the old configuration for JSON based PATCH.
+
 2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
- * SQL can be run with a list of JSON arguments.
+ SQL can be run with a list of JSON arguments.
 
 2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
  Add a connection factory function that can read some values from the request.
